--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,26 @@
   display: block;
 }
 
+._orange {
+  background-color: #ffe4c2;
+  color: #ff6d00;
+}
+
+._green {
+  background-color: #b4fdd1;
+  color: #06b16e;
+}
+
+._purple {
+  background-color: #e9d4ff;
+  color: #9a48f1;
+}
+
+._gray {
+  background: #94a6be;
+  color: #ffffff;
+}
+
 ._active-category {
   opacity: 1 !important;
 }
@@ -14,7 +34,7 @@
 }
 
 .pop-new-card {
-  display: none;
+  display: block;
   width: 100%;
   min-width: 375px;
   height: 100%;
@@ -167,7 +187,7 @@
 }
 
 .pop-browse {
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   min-width: 375px;
@@ -337,14 +357,6 @@
 
 ._hide {
   display: none;
-}
-
-.load {
-  font-size: 28px;
-  font-weight: 500;
-  position: absolute;
-  top: 50%;
-  left: 50%;
 }
 
 @media screen and (max-width: 660px) {
