--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+._hover01:hover {
+  background-color: #33399b;
+}
+
+._hover02:hover,
+.header__user:hover {
+  color: #33399b;
+}
+._hover02:hover::after,
+.header__user:hover::after {
+  border-left-color: #33399b;
+  border-bottom-color: #33399b;
+}
+
+._hover03:hover {
+  background-color: #33399b;
+  color: #ffffff;
+}
+._hover03:hover a {
+  color: #ffffff;
+}
+
 .pop-new-card:target,
 .pop-browse:target {
   display: block;
@@ -178,6 +200,7 @@
   border-radius: 24px;
   margin-right: 7px;
   opacity: 0.4;
+  cursor: pointer;
 }
 .categories__theme p {
   font-size: 14px;
@@ -326,6 +349,7 @@
   padding: 11px 14px 10px;
   margin-right: 7px;
   margin-bottom: 7px;
+  cursor: pointer;
 }
 .status__theme p {
   font-size: 14px;
