--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,6 @@
   background-color: #33399b;
   color: #ffffff;
 }
-._hover03:hover a {
-  color: #ffffff;
-}
 
 .pop-new-card:target,
 .pop-browse:target {
@@ -87,6 +84,7 @@
   border-radius: 10px;
   border: 0.7px solid #d4dbe5;
   position: relative;
+  overflow-y: auto;
 }
 .pop-new-card__content {
   display: block;
@@ -175,11 +173,6 @@
   float: right;
 }
 
-._active-day {
-  background-color: #94a6be;
-  color: #ffffff;
-}
-
 .categories {
   margin-bottom: 20px;
 }
@@ -241,6 +234,7 @@
   border-radius: 10px;
   border: 0.7px solid #d4dbe5;
   position: relative;
+  overflow-y: auto;
 }
 .pop-browse__content {
   display: block;
@@ -364,9 +358,6 @@
   background: transparent;
   color: #565eef;
 }
-._btn-bor a {
-  color: #565eef;
-}
 
 ._btn-bg {
   border-radius: 4px;
@@ -375,18 +366,12 @@
   outline: none;
   color: #ffffff;
 }
-._btn-bg a {
-  color: #ffffff;
-}
 
 ._hide {
   display: none;
 }
 
 @media screen and (max-width: 660px) {
-  .pop-new-card {
-    top: 70px;
-  }
   .pop-new-card__container {
     padding: 0;
     justify-content: flex-start;
@@ -396,9 +381,6 @@
   }
   .pop-new-card__wrap {
     display: block;
-  }
-  .pop-browse {
-    top: 70px;
   }
   .pop-browse__container {
     padding: 0;
@@ -412,10 +394,6 @@
   }
 }
 @media screen and (max-width: 495px) {
-  .pop-new-card__container {
-    padding: 0;
-    justify-content: flex-start;
-  }
   .pop-new-card__block {
     padding: 20px 16px 32px;
   }
